Version History

  ' ' 2.1.3 -- ' '
        
        * Fixed syntax error in the French translation.
          [ewr119 (Erik Rose)]
        
        * Included compiled (.mo) versions of all translations.
          [ewr119 (Erik Rose)]

        * Fix the getClassificationNames index method so that it doesn't
          throw an error trying to concatenate a function and an int
          [cqp5087 (claytron)]

        * Remove MANIFEST.in and use setuptools svn integration instead
          [cqp5087 (claytron)]

  ' ' 2.1.2 -- ' '
        
        * Corrected a problem with the reference browser widget popup not
          displaying available items when used on a site using virtual 
          hosting. [ems174 (Eric Steele)]

  ' ' 2.1.1.1 -- ' '
    
        * Corrected a problem with missing files in the 2.1.1 distribution.
          [ems174 (Eric Steele)]
        
  ' ' 2.1.1 -- ' '
                
        * Corrected a problem with person_view.pt that caused errors
          when anonymous users viewed a person with an assistant
          assigned. [cewing]
        
        * Corrected a problem that prevented versioning of Persons and
          Committees. [cewing]
        
        * Added a dedicated Committees Folder view (similar to the
          specialies folder view). [ajung]
        
        * A Specialty has an extra schemata "Overview" with an image and
          richtext field. Both fields are used for the 
          speciality_overview view. [ajung]
        
        * Added microformats for person_view's address block. [robzonenet] 
        
        * Added Spanish translation [Gildardo Bautista]

        * Added French translation [Benjamin Klups]
        
        * List department in person_view [Gildardo Bautista]
        
        * Corrected a problem with viewing departments located outside
          of a Directory object. [ems174 (Eric Steele)]
        
  ' ' 2.1 -- ' '
        
        * Corrected some CSS display issues with Person pictures.
