@@ -2,6 +2,9 @@ Version History
 
   ' ' 2.1.3 -- ' '
         
+        * Wrapped example extender in egg packaging and renamed it.
+          [ewr119 (Erik Rose)]
+        
         * Fixed syntax error in the French translation.
           [ewr119 (Erik Rose)]
         
